integration_tests/codegen_fail/fail/scalar_value/multiple_named_fields.rs
#[derive(juniper::GraphQLScalarValue)]
enum ScalarValue {
    Variant { first: i32, second: u64 },
}

fn main() {}
